Colaboratory를 통해 생성됨

--- a/EXE221031_3.ipynb
+++ b/EXE221031_3.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOd7M9LT+Co3Ex5MTWPUOw8",
+      "authorship_tag": "ABX9TyPTisIuNdS+rrhhkEzgKbQG",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -23,12 +23,12 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/sonhyeonji/EXE/blob/main/EXE221031_3.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/sonhyeonji/EXE_221031/blob/main/EXE221031_3.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -79,7 +79,7 @@
         "id": "W8vWyRhn2VOM",
         "outputId": "dbc21ba5-b7e1-4fd7-a9d0-bea1e5a05569"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -114,7 +114,7 @@
         "id": "lc-N5KD72zi0",
         "outputId": "a69c811f-9a94-4072-80d5-08b9001d4c0e"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -144,7 +144,7 @@
         "id": "yADOJYjL8CFb",
         "outputId": "5cd9f747-e2d3-4487-8f6b-28c66af9a9ba"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -179,7 +179,7 @@
         "id": "6b-fiwmgCRBF",
         "outputId": "46dd0e85-7b50-42f8-b5e0-dddac29a4a6b"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -192,12 +192,30 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "a=int(input(\"물체의 무게를 입력하시오.(킬로그램):\"))\n",
+        "b=int(input(\"물체의 속도를 입력하시오.(미터/초):\"))\n",
+        "print(\"물체는\", 1/2*a*b**2, \"(줄)의 에너지를 가지고 있다.\")"
+      ],
       "metadata": {
-        "id": "JSVMaw5oLAhw"
+        "id": "JSVMaw5oLAhw",
+        "outputId": "83b7a555-52cb-43d7-999c-508b272765fb",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "물체의 무게를 입력하시오.(킬로그램):10\n",
+            "물체의 속도를 입력하시오.(미터/초):100\n",
+            "물체는 50000.0 (줄)의 에너지를 가지고 있다.\n"
+          ]
+        }
+      ]
     }
   ]
 }
